Increase width of options window This fixes an odd issue on Linux where the bottom and right borders for the tabbed settings in the Page pane were not visible. Signed-off-by: Brian Marshall <b3marshall@gmail.com>

--- a/chrome/skin/options.css
+++ b/chrome/skin/options.css
@@ -1,6 +1,6 @@
 #gamefox-prefwindow
 {
-    max-width: 500px;
+    max-width: 600px;
 }
 
 #gamefox-tags-rows::-moz-tree-row(container)
